# vscode-hovercraft

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: publish.yml  test.yml
hovercraft/: pyproject.toml
hovercraft/src/hovercraft/: hover.py  server.py
hovercraft/tests/: conftest.py  test_hover.py
scripts/: e2e.sh
src/: extension.ts
src/test/: runTest.ts
src/test/suite/: extension.test.ts  hover.test.ts  index.ts
