[project]
name = "hovercraft"
version = "0.1.0"
description = "A language server showing hover information for any language."
readme = "README.md"
authors = [
	{ name = "Dheepak Krishnamurthy", email = "1813121+kdheepak@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
	"pygls>=1.3.0",
	"pandas>=2.0.0",   # For efficient CSV handling
	"watchdog>=3.0.0", # For file watching
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0.0",
	"pytest-asyncio>=0.21.0",
	"black>=23.0.0",
	"ruff>=0.1.0",
	"mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hovercraft-server = "hovercraft.server:main"
