[project]
name = "hovercraft"
dynamic = ["version"]
description = "A language server showing hover information for any language."
readme = "README.md"
authors = [
	{ name = "Dheepak Krishnamurthy", email = "1813121+kdheepak@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
	"pygls>=1.3.0",
	"pandas>=2.0.0",       # For efficient CSV handling
	"watchdog>=3.0.0",     # For file watching
	"platformdirs>=4.3.8",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0.0",
	"pytest-asyncio>=0.21.0",
	"black>=23.0.0",
	"ruff>=0.1.0",
	"mypy>=1.0.0",
]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project.scripts]
hovercraft-server = "hovercraft.server:main"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
# Example formatted version: 1.2.4.dev42+ge174a1f

dirty = "{base_version}+d{build_date:%Y%m%d}"
# Example formatted version: 1.2.3+d20230922

distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
# Example formatted version: 1.2.4.dev42+ge174a1f.d20230922

[tool.versioningit.fallback]
version = "0.1.0.dev0"
